force-app/main/default/objects/ssot__CampaignMember__dlm/fields/ssot__CampaignMemberStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__CampaignMemberStatus__c</fullName>
    <label>Campaign Member Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CampaignMemberStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>