force-app/main/default/objects/ssot__CampaignMember__dlm/fields/ssot__IndividualSourceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__IndividualSourceId__c</fullName>
    <label>Individual Source Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IndividualSourceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>