force-app/main/default/objects/ssot__CampaignMember__dlm/fields/ssot__IndividualSourceObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__IndividualSourceObject__c</fullName>
    <label>Individual Source Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IndividualSourceObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>