force-app/main/default/objects/ssot__CampaignMember__dlm/fields/ssot__rel_1708254974873_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1708254974873_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CampaignMember_ContactPointPhoneId_m_rel</label>
    <referenceTo>ssot__ContactPointPhone__dlm</referenceTo>
    <relationshipLabel>CampaignMember_ContactPointPhoneId_m_rel</relationshipLabel>
    <relationshipName>rel_1708254974873_end</relationshipName>
    <type>Lookup</type>
</CustomField>