force-app/main/default/objects/ssot__CampaignMember__dlm/fields/ssot__rel_1708254976791_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1708254976791_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CampaignMember_CampaignId_map_Campai_rel</label>
    <referenceTo>ssot__Campaign__dlm</referenceTo>
    <relationshipLabel>CampaignMember_CampaignId_map_Campai_rel</relationshipLabel>
    <relationshipName>rel_1708254976791_end</relationshipName>
    <type>Lookup</type>
</CustomField>