force-app/main/default/objects/ssot__CampaignMember__dlm/fields/ssot__rel_1708254984589_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1708254984589_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CampaignMember_IndividualSourceId_ma_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>CampaignMember_IndividualSourceId_ma_rel</relationshipLabel>
    <relationshipName>rel_1708254984589_end</relationshipName>
    <type>Lookup</type>
</CustomField>